[package]
name = "vc-perf-tools"
version = "0.1.0"
authors = ["chao zheng <charleszheng44@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
rand = "0.8.0"
